--- a/inventory-service.yml
+++ b/inventory-service.yml
@@ -1,6 +1,6 @@
 jpa:
   hibernate:
-    ddl-auto: update
+    ddl-auto: create-drop
   properties:
     hibernate:
       dialect: org.hibernate.dialect.PostgreSQLDialect
