--- a/order-service.yml
+++ b/order-service.yml
@@ -1,8 +1,10 @@
-jpa:
-  hibernate:
-    ddl-auto: create-drop
-  properties:
+spring:
+  jpa:
+    database-platform: org.hibernate.dialect.MySQL5InnoDBDialect
     hibernate:
-      dialect: org.hibernate.dialect.PostgreSQLDialect
-      format_sql: true
-  show-sql: true
+      ddl-auto: create-drop
+    properties:
+      hibernate:
+        dialect: org.hibernate.dialect.PostgreSQLDialect
+        format_sql: true
+    show-sql: true
